--- a/LocationSDKApp/appinfosdk/build.gradle
+++ b/LocationSDKApp/appinfosdk/build.gradle
@@ -29,3 +29,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
+
+task deleteOldJar(type: Delete){
+    delete 'release/myCompiledLibrary.jar'
+}
+
+//E:\Prashant\Github_Demo\modual-integration\LocationSDKApp\appinfosdk\build\intermediates\bundles
+task exportJar(type: Copy) {
+    from('build/intermediates/bundles/release/')
+    into('release/')
+    include('classes.jar')
+    rename ('classes.jar', 'myCompiledLibrary.jar')
+}
+
+
